# json-trait-rs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  features-enabled-on-nightly-only
scripts/: cargo-features.sh  cargo-project-name.sh  cargo-version.sh
scripts/travis/: before_script.sh  install.sh
src/: error.rs  fragment.rs  fragment_helpers.rs  index.rs  json_type.rs  lib.rs  macros.rs  rust_type.rs  rust_type_impl.rs  testing.rs
src/traits/: _json.rs  _pyo3.rs  _serde_json.rs  _serde_yaml.rs  mod.rs
