[package]
authors = ["Samuele Maci <macisamuele@gmail.com>"]
categories = ["data-structures", "development-tools", "encoding", "parsing"]
description = "Rust interface (aka trait) to deal with objects as they are JSON objects"
repository = "https://github.com/macisamuele/json-trait-rs"
edition = "2018"
keywords = ["json"]
license = "MIT"
name = "json-trait-rs"
readme = "README.md"
publish = true
version = "0.3.0"

[badges]
codecov = { repository = "macisamuele/json-trait-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "macisamuele/json-trait-rs" }
is-it-maintained-open-issues = { repository = "macisamuele/json-trait-rs" }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
trait_json = ["json"]
trait_serde_json = ["serde_json"]
trait_serde_yaml = ["serde_yaml"]

[dev-dependencies]
lazy_static = "1"
serde_json = "1"
test-case-derive = "0"

[dependencies]
json = { version = "0", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0", optional = true }
strum = "0"
strum_macros = "0"
unreachable = "1"

[patch.crates-io]
# TODO: Remove patch once https://github.com/synek317/test-case-derive/pull/5 is merged
test-case-derive = { git = "https://github.com/macisamuele/test-case-derive", branch = "maci-allow-build-on-stable"}
